--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- consider event only if there is a significant (score > 0.2) and same type event near (2-3 hour) it \n",
+    "- consider event only if there is a significant (score > 0.2) and same type event is near (2-3 hour) it \n",
     "- power averaging\n",
-    "- weight models by their CV/LB scores\n",
     "\n",
     "- try with 4 folds\n",
     "- try with 6 folds\n",
@@ -24,14 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1604658/645862764.py:39: UserWarning: \n",
+      "/tmp/ipykernel_1662410/251296522.py:39: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -59,8 +84,8 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = True\n",
-    "EXP_NAME = \"transformer_best_folds\"\n",
+    "INFERENCE = False\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -108,234 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8094414506789835, 340174)"
+       "(0.7672724347834871, 54999)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from scipy.signal import find_peaks\n",
-    "\n",
-    "def clean_weak_events(sub_df, event_threshold):\n",
-    "    # delete onset and wakeup events that are too far from the same events with high score\n",
-    "    sub_df[\"prev_onset_step\"] = np.nan\n",
-    "    sub_df[\"next_onset_step\"] = np.nan\n",
-    "    sub_df[\"prev_wakeup_step\"] = np.nan\n",
-    "    sub_df[\"next_wakeup_step\"] = np.nan\n",
-    "    sub_df[\"to_del\"] = 0\n",
-    "\n",
-    "    # onset\n",
-    "    mask = (sub_df[\"event\"] == \"onset\") & (sub_df[\"score\"] >= 0.1)\n",
-    "    sub_df.loc[mask, \"prev_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df.loc[mask, \"next_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df[\"prev_onset_step\"] = sub_df[\"prev_onset_step\"].ffill()\n",
-    "    sub_df[\"next_onset_step\"] = sub_df[\"next_onset_step\"].bfill()\n",
-    "\n",
-    "\n",
-    "def clean_too_far_events(sub_df, event_threshold):\n",
-    "    # # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
-    "    # sub_df[\"prev_onset_step\"] = np.nan\n",
-    "    # sub_df[\"next_onset_step\"] = np.nan\n",
-    "    # sub_df[\"prev_wakeup_step\"] = np.nan\n",
-    "    # sub_df[\"next_wakeup_step\"] = np.nan\n",
-    "    # sub_df[\"to_del\"] = 0\n",
-    "\n",
-    "    # # onset\n",
-    "    # mask = sub_df[\"event\"] == \"onset\"\n",
-    "    # sub_df.loc[mask, \"prev_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    # sub_df.loc[mask, \"next_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    # sub_df[\"prev_onset_step\"] = sub_df[\"prev_onset_step\"].ffill()\n",
-    "    # sub_df[\"next_onset_step\"] = sub_df[\"next_onset_step\"].bfill()\n",
-    "\n",
-    "    # mask = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] >= event_threshold\n",
-    "    # sub_df.loc[mask, \"to_del\"] = 1\n",
-    "\n",
-    "    # # wakeup\n",
-    "    # mask = sub_df[\"event\"] == \"wakeup\"\n",
-    "    # sub_df.loc[mask, \"prev_wakeup_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    # sub_df.loc[mask, \"next_wakeup_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    # sub_df[\"prev_wakeup_step\"] = sub_df[\"prev_wakeup_step\"].ffill()\n",
-    "    # sub_df[\"next_wakeup_step\"] = sub_df[\"next_wakeup_step\"].bfill()\n",
-    "\n",
-    "    # mask = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] >= event_threshold\n",
-    "    # sub_df.loc[mask, \"to_del\"] = 1\n",
-    "\n",
-    "    # detect alone onset event that are between two other onset events and delete them\n",
-    "    # onset\n",
-    "    alone_threshold = 2880\n",
-    "    mask_1 = (\n",
-    "        sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1)\n",
-    "        < sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"]\n",
-    "    )\n",
-    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1) >= alone_threshold\n",
-    "    mask_3 = (\n",
-    "        sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "        < sub_df[\"next_wakeup_step\"] - sub_df[\"step\"]\n",
-    "    )\n",
-    "    mask_4 = sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    mask_5 = sub_df[\"event\"] == \"onset\"\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # wakeup\n",
-    "    mask_1 = (\n",
-    "        sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1)\n",
-    "        < sub_df[\"step\"] - sub_df[\"prev_onset_step\"]\n",
-    "    )\n",
-    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1) >= alone_threshold\n",
-    "    mask_3 = (\n",
-    "        sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "        < sub_df[\"next_onset_step\"] - sub_df[\"step\"]\n",
-    "    )\n",
-    "    mask_4 = sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    mask_5 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # delete events that are among many different events\n",
-    "    # onset\n",
-    "    close_threshold = 360\n",
-    "    mask_1 = (\n",
-    "        (sub_df[\"event\"].shift(1) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(2) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(3) == \"wakeup\")\n",
-    "    )\n",
-    "    mask_2 = (\n",
-    "        (sub_df[\"event\"].shift(-1) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(-2) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(-3) == \"wakeup\")\n",
-    "    )\n",
-    "    mask_3 = sub_df[\"event\"] == \"onset\"\n",
-    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"] <= close_threshold\n",
-    "    mask_5 = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] <= close_threshold\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # wakeup\n",
-    "    mask_1 = (\n",
-    "        (sub_df[\"event\"].shift(1) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(2) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(3) == \"onset\")\n",
-    "    )\n",
-    "    mask_2 = (\n",
-    "        (sub_df[\"event\"].shift(-1) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(-2) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(-3) == \"onset\")\n",
-    "    )\n",
-    "    mask_3 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] <= 360\n",
-    "    mask_5 = sub_df[\"next_onset_step\"] - sub_df[\"step\"] <= 360\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # remove these events\n",
-    "    sub_df = sub_df[sub_df[\"to_del\"] == 0]\n",
-    "\n",
-    "    return sub_df\n",
-    "\n",
-    "\n",
-    "def post_process_for_seg(\n",
-    "    keys: list[str],\n",
-    "    preds: np.ndarray,\n",
-    "    series_lens: dict,\n",
-    "    score_th: float = 0.01,\n",
-    "    distance: int = 5000,\n",
-    "    offset: int = 0,\n",
-    ") -> pd.DataFrame:\n",
-    "    \"\"\"make submission dataframe for segmentation task\n",
-    "\n",
-    "    Args:\n",
-    "        keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
-    "        preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
-    "        score_th (float, optional): threshold for score. Defaults to 0.5.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: submission dataframe\n",
-    "    \"\"\"\n",
-    "    series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
-    "    unique_series_ids = np.unique(series_ids)\n",
-    "\n",
-    "    records = []\n",
-    "    for series_id in unique_series_ids:\n",
-    "        max_step = series_lens[series_id]\n",
-    "\n",
-    "        series_idx = np.where(series_ids == series_id)[0]\n",
-    "        this_series_preds = preds[series_idx].reshape(-1, 2)\n",
-    "        # this_series_preds = this_series_preds[:max_step]\n",
-    "\n",
-    "        onset_event_preds = this_series_preds[:, 0]\n",
-    "        onset_steps = find_peaks(onset_event_preds, height=score_th, distance=distance)[0]\n",
-    "        onset_scores = onset_event_preds[onset_steps]\n",
-    "        min_onset_step = np.min(onset_steps) if len(onset_steps) > 0 else 0\n",
-    "\n",
-    "        wakeup_event_preds = this_series_preds[:, 1]\n",
-    "        wakeup_steps = find_peaks(wakeup_event_preds, height=score_th, distance=distance)[0]\n",
-    "        wakeup_scores = wakeup_event_preds[wakeup_steps]\n",
-    "        max_wakeup_step = np.max(wakeup_steps) if len(wakeup_steps) > 0 else 0\n",
-    "        \n",
-    "        for step, score in zip(onset_steps, onset_scores):\n",
-    "            # select only wakeups than has at least one onset before\n",
-    "            # and not too close to series borders\n",
-    "            if step >= max_wakeup_step or step <= 720 or step >= max_step - 720 * offset:\n",
-    "                continue\n",
-    "\n",
-    "            records.append(\n",
-    "                {\n",
-    "                    \"series_id\": series_id,\n",
-    "                    \"step\": step,\n",
-    "                    \"event\": \"onset\",\n",
-    "                    \"score\": score,\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "        for step, score in zip(wakeup_steps, wakeup_scores):\n",
-    "            # select only onsets than has at least one wakeup after\n",
-    "            # and not too close to series borders\n",
-    "            if step <= min_onset_step or step <= 720 * offset or step >= max_step - 180:\n",
-    "                continue\n",
-    "\n",
-    "            records.append(\n",
-    "                {\n",
-    "                    \"series_id\": series_id,\n",
-    "                    \"step\": step,\n",
-    "                    \"event\": \"wakeup\",\n",
-    "                    \"score\": score,\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "    if len(records) == 0:  # If there is no prediction, insert dummy\n",
-    "        records.append(\n",
-    "            {\n",
-    "                \"series_id\": series_id,\n",
-    "                \"step\": 0,\n",
-    "                \"event\": \"onset\",\n",
-    "                \"score\": 0,\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "    sub_df = pd.DataFrame(records).sort_values([\"series_id\", \"step\"]).reset_index(drop=True)\n",
-    "    sub_df[\"row_id\"] = np.arange(len(sub_df))\n",
-    "\n",
-    "    # 20 hours\n",
-    "    # event_threshold = 14400\n",
-    "    # sub_df = clean_too_far_events(sub_df, event_threshold)\n",
-    "\n",
-    "    sub_df = sub_df[[\"row_id\", \"series_id\", \"step\", \"event\", \"score\"]]\n",
-    "\n",
-    "    return sub_df\n",
-    "\n",
     "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
     "    series_lens = json.load(f)\n",
     "\n",
@@ -345,19 +157,6 @@
     "score = event_detection_ap(gt_df, pred_df)\n",
     "\n",
     "score, len(pred_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (0.8089056501199559, 344672) - classic ensemble\n",
-    "\n",
-    "# (0.8089056501199559, 344672) - weightning\n",
-    "\n",
-    "# (0.8093413181785607, 338731) - weightning of 6 models\n"
    ]
   },
   {
